2005-01-02  Christian Stimming  <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc: New methods by Jens Gecius
	<jens@gecius.de>. He also discovered a fundamental problem with
	algo02, but didn't have time so far to fix it.

2004-11-10  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Released version 1.2

	* src/bankdata/bankdata.txt: Updated, now valid from 2004-12-04
	onwards.

2004-09-10   Christian Stimming <stimming@tuhh.de>

	* src/include/ktoblzcheck.h, src/lib/accnum.cc: Improve
	documentation. Add C wrapper for copy constructor of
	AccountNumberCheck::Record class.
	
	* src/lib/Makefile.am: Increase SO_VERSION and SO_AGE because a
	function has been added.

2004-09-08   Christian Stimming <stimming@tuhh.de>

	* configure.in: Released version 1.1

	* src/lib/algorithms.cc (accnum_getRegKey): Add function to
	retrieve installation path from windows registry.

	* ktoblzcheck.iss.in: Add setup file for Inno Setup compiler.

2004-08-23  Christian Stimming  <stimming@tuhh.de>

	* src/lib/algorithms.cc: Another fix for algo 53/54 by Erik Kerger
	<erik@kedo.com>.

2004-08-14  Christian Stimming  <stimming@tuhh.de>

	* src/bankdata/bankdata.txt: Updated, now valid from 2004-09-06
	onwards.

	* src/lib/algorithms.cc, src/lib/ktoblzcheck.cc: Fix for algo 53
	by Erik Kerger <erik@kedo.com>.

2004-07-20  Christian Stimming <stimming@tuhh.de>

	* configure.in: Released version 1.0

	* README: Updated new URL of bankdata source
	
	* src/bankdata/bankdata.txt: Updated, now valid from 2004-06-07
	onwards.

2004-05-04  Christian Stimming  <stimming@tuhh.de>

	* ktoblzcheck.vcproj: Add project file for Microsoft Visual Studio
	C++ compiler -- this should run out-of-the-box. Fixed several
	source code problems with the MSVC compiler.
	
	* macros/ac_c_long_long.m4: Add configure check for long long
	type. Fix macros for upcoming automake-1.8.
	
	* src/lib/Makefile.am: Fix DLL rules.
	
	* INSTALL.WIN32: Add installation notes for windows archives.
