@@ -1,3 +1,7 @@
+2005-01-11  Christian Stimming <stimming@tuhh.de>
+
+	* src/lib/ktoblzcheck.cc: Fix for method 11 by Erik Kerger
+
 2005-01-02  Christian Stimming  <stimming@tuhh.de>
 
 	* src/lib/ktoblzcheck.cc: New methods by Jens Gecius
